--- a/TP2-V2/styles/styles.css
+++ b/TP2-V2/styles/styles.css
@@ -1,173 +1,166 @@
-html {
-    height: 100%;
-    scroll-behavior: smooth;
-}
 body {
-    font-family: 'Courier New';
+    background: rgb(167, 167, 167);
+    background: linear-gradient(rgb(194, 194, 194) 0%, rgb(228, 228, 228) 100%);
     min-height: 100vh;
     margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background: linear-gradient(#a5a59f, #c9c4be);
+    font-family: Arial;
 }
 
-header{
-    margin: 0;
-    padding: 5px;
+/*Début du Header*/
+
+header {
+    height: 10%;
     display: flex;
     justify-content: space-between;
-}
-
-.ico{
-    margin: 10px;
-}
-
-.logo {
-    display: flex;
     align-items: center;
 }
 
-.pages{
-    display: flex;
-    margin-right: auto;
-    margin-left: auto;
-    align-items: center;
-    gap: 50px;
-    font-size: larger;
-    font-weight: bold;
+header .logo {
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
-.page:hover{
-    color: rgb(54, 54, 219);
+svg {
+    margin-right: 5px;
 }
 
-.connexion{
-    align-items: center;
-    margin-right: 10px;
-    margin-top: 20px;
-    text-align: center;
-    display: flex;
-    border-radius: 10px;
-    height: 30px;
-    padding: 5px;
-}
-
-.connexion:hover{
-    border-color: rgb(107, 107, 211);
-}
-
-a{
+header .logo a {
     display: flex;
     align-items: center;
     text-decoration: none;
     color: black;
+    font-size: 30px;
 }
 
-.log{
-    color: rgb(54, 54, 219);
+.onglets{
+    font-size: larger;
 }
 
-.log:hover{
-    color: rgb(107, 107, 211);
-}
-
-#Boutton{
+.onglet {
+    margin-left: 20px;
     text-decoration: none;
-    font-size: large;
-    color: rgb(54, 54, 219);
-    padding: 15px;
-    border: solid 2px rgb(54, 54, 219);
-    border-radius: 10px;    
+    color: black;
+    font-weight: bolder;
 }
 
-#Boutton:hover{
-    color: rgb(107, 107, 211);
-    border-color: rgb(107, 107, 211);;
+header .connexion {
+    margin-right: 15px;
+    padding: 10px 30px;
+    font-weight: bold;
 }
 
-h2{
-    width: 400px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-size: 50px;
+header button {
+    border: solid 2px rgb(44, 108, 190);
+    color: rgb(44, 108, 190);
+    background-color: transparent;
+    cursor: pointer;
 }
 
-.welcome{
-    margin-left: 200px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+header .onglet:hover{
+    color: blue;
+    transition: all 1s ease 0s;
 }
 
-.texte{
-    width: 400px;
+header button:hover{
+    color: blue;
+    transition: all 1s ease 0s;
 }
+/*Fin du Header*/
 
-.gauche{
-    width: 400px;
-}
-
-.demflex{
-    font-family: Arial;
+/*Début du contenu*/
+.contenu1 {
     display: flex;
-    gap: 5px;
-    margin-left: 200px;
+    justify-content: space-between;
+    height: 100vh;
+    padding-top: 100px;
 }
 
-.minion1{
+/*Partie gauche du contenu*/
+.contenu1 .gauche {
+    margin-left: 80px;
     font-size: larger;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    gap: 20px;
-    border: solid 2px rgb(56, 132, 219);
-    background-color: rgb(56, 132, 219);
-    border-radius: 5.5px;
-    height: 20px;
-    width: 100px;
-    margin-left: auto;
+    width: 30%;
 }
 
-.minion2{
+.contenu1 .gauche p {
+    margin-bottom: 30px;
+}
+
+.contenu1 .gauche h1 {
+    margin: 0;
+}
+
+.contenu1 .gauche button{
+    border: none;
     font-size: larger;
-    gap: 20px;
-    border: solid 2px rgb(56, 132, 219);
-    border-radius: 5.5px;
-    padding: 5px;
-    height: 20px;
-    width: 190px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    background-color: rgb(63, 129, 214);
+    border: solid 2px rgb(63, 129, 214);
+    color: white;
+    padding: 10px 40px;
+    cursor: pointer;
 }
 
-.svg{
-    width: auto;
+.contenu1 .gauche .inscription {
+    color: rgb(63, 129, 214);
+    background-color: transparent;
+    border: solid 2px rgb(63, 129, 214);
+}
+/*Fin de partie gauche du contenu*/
+
+/*Partie droite du contenu*/
+.contenu1 .droite {
+    width: 60%;
 }
 
-.grandpapa{
-    display: flex;
+.contenu1 .droite img{
+    width: 400px;
+    height: 400px;
+    margin: 0;
+    margin-left: 100px;
+}
+/*Fin de partie droite du contenu*/
+/*Fin du contenu1*/
+
+/*Contenu cercle x footer*/
+.contenu2 {
+    height: 100vh;
+    background: (rgb(228, 228, 228) 100%);
 }
 
-.droite{
-    margin-left: 300px;
-    margin-top: 100px;
-}
-
-.background{
-    width: auto;    
-    padding: 60px;
-    background-color: #c9c4be;
-}
-
-.cercle{
-    background: linear-gradient(#d42dda, #24a5cc);
-    width: 200px;
-    height: 200px;
+.cercle {
+    height: 300px;
+    width: 300px;
+    background: linear-gradient(rgb(216, 30, 233),rgb(26, 14, 197));
     border-radius: 50%;
-    margin-top: 150px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 150px;
 }
+
+footer {
+    background-color: rgb(17, 17, 17);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    padding: 20px;
+}
+
+footer p {
+    margin: 0px;
+    display: flex;
+}
+
+footer .logo span {
+    color: white;
+    align-items: center;
+}
+
+footer .logo a {
+    text-decoration: none;
+}
+
+html {
+    scroll-behavior: smooth;
+    transition: 1s ease 0s;
+}
+/*Fin du contenu cercle x footer*/
