--- a/S2/E-Portfolio (SAE)/css/stylesheet.css
+++ b/S2/E-Portfolio (SAE)/css/stylesheet.css
@@ -16,13 +16,6 @@ body {
 
 h1 {
     font-family: "Kusanagi";
-    font-size: 50px;
-    color: white;
-    text-align: center;
-}
-
-h2 {
-    font-family: "Kusanagi";
     font-size: 35px;
     color: white;
 }
@@ -63,7 +56,52 @@ li {
 
 .enterwired {
     position: absolute;
-    top: 40%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
+    cursor: pointer;
+    user-select: none;
 }
+
+/* Enter The Wired Arrow */
+.arrow {
+    position: absolute;
+    top: 180%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.arrow span {
+    display: block;
+    width: 1.5vw;
+    height: 1.5vw;
+    border-bottom: 5px solid white;
+    border-right: 5px solid white;
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: animate 2s infinite;
+}
+
+.arrow span:nth-child(2) {
+    animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3) {
+    animation-delay: -0.4s;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px, -20px);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: rotate(45deg) translate(20px, 20px);
+    }
+}
+/* Enter The Wired Arrow End*/
