--- a/S2/E-Portfolio (SAE)/css/stylesheet.css
+++ b/S2/E-Portfolio (SAE)/css/stylesheet.css
@@ -36,7 +36,7 @@ ul {
 li {
     list-style-type: none;
     font-family: "Kusanagi";
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .back-vid {
@@ -61,6 +61,21 @@ li {
     transform: translate(-50%, -50%);
     cursor: pointer;
     user-select: none;
+}
+
+.enteranim {
+    animation: enteranim 1s alternate-reverse;
+    animation-iteration-count: infinite;
+}
+
+@keyframes enteranim {
+    100%,
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
 }
 
 /* Enter The Wired Arrow */
