--- a/S2/E-Portfolio SAE202/css/about.css
+++ b/S2/E-Portfolio SAE202/css/about.css
@@ -13,14 +13,16 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: #000000;
+    margin: 0;
+    min-height: 100vh;
+    overflow: hidden;
+    touch-action: none;
 }
 
 h1 {
     font-family: "Kusanagi";
     font-size: 35px;
     color: white;
-}
-
-a {
-    color: aqua;
+    display: flex;
+    justify-content: center;
 }
