--- a/S2/E-Portfolio SAE202/css/about.css
+++ b/S2/E-Portfolio SAE202/css/about.css
@@ -10,13 +10,17 @@
     color: white;
 }
 
+canvas {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -9;
+}
+
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: #000000;
-    margin: 0;
-    min-height: 100vh;
-    overflow: hidden;
-    touch-action: none;
 }
 
 h1 {
