--- a/S2/E-Portfolio SAE202/css/sae.css
+++ b/S2/E-Portfolio SAE202/css/sae.css
@@ -10,6 +10,14 @@
     color: white;
 }
 
+canvas {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -9;
+}
+
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: #000000;
@@ -19,8 +27,4 @@ h1 {
     font-family: "Kusanagi";
     font-size: 35px;
     color: white;
-}
-
-a {
-    color: aqua;
 }
