--- a/S2/E-Portfolio SAE202/css/about.css
+++ b/S2/E-Portfolio SAE202/css/about.css
@@ -42,7 +42,7 @@ h1 {
     color: white;
 
     transform: scale(0);
-    transition: 1s;
+    transition: ease 1s;
     transition-delay: 1s;
     z-index: 2;
 
@@ -54,7 +54,33 @@ h1 {
     transform: scale(1);
 }
 
+.show2 {
+    margin-bottom: 60px;
+}
+
 /* FOOTER SOCIALS */
+footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    margin-bottom: 0px;
+    transform: scale(0);
+    transition: 1s;
+    transition-delay: 0.5s;
+    z-index: 2; 
+}
+
+textarea {
+    resize: none;
+}
+
 .text {
     color: white;
     font-size: 20px;
@@ -84,7 +110,7 @@ h1 {
     padding: 0;
     text-decoration: none;
     text-align: center;
-    color: #fefefe;
+    color: #ffffff;
     font-size: 1.5625rem;
     font-weight: normal;
     line-height: 2em;
@@ -132,4 +158,24 @@ h1 {
     color: #007bb5;
     background: #fefefe;
     border-color: #007bb5;
+  }
+  
+  .rounded-social-buttons .social-button.youtube {
+    background: #bb0000;
+  }
+  
+  .rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.youtube:focus {
+    color: #bb0000;
+    background: #fefefe;
+    border-color: #bb0000;
+  }
+  
+  .rounded-social-buttons .social-button.instagram {
+    background: #125688;
+  }
+  
+  .rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
+    color: #125688;
+    background: #fefefe;
+    border-color: #125688;
   }
