--- a/S2/E-Portfolio SAE202/css/sae.css
+++ b/S2/E-Portfolio SAE202/css/sae.css
@@ -77,7 +77,7 @@ label {
         position: absolute;
         top: 50%;
         left: 50%;
-        background: #0e182d;
+        background: #ffffff;
         width: 0;
         height: 1.2em;
         -webkit-transform: translate(-50%, -55%);
