--- a/S2/E-Portfolio SAE202/css/sae.css
+++ b/S2/E-Portfolio SAE202/css/sae.css
@@ -30,6 +30,7 @@ h1 {
     font-size: 35px;
     color: white;
     display: flex;
+    flex-direction: column;
     justify-content: left;
     margin-bottom: 150px;
     margin-left: 50px;
@@ -52,22 +53,12 @@ main div {
 }
 
 label {
-    margin-right: 50px;
+    margin-right: 80px;
+    cursor: pointer;
 }
 
-/* Filters */
-.zoneFiltres {
-    font-size: larger;
-    text-decoration: none;
-
-    display: flex;
-    justify-content: left;
-    text-align: center;
-    padding: 5px;
-    gap: 10px;
-
-    margin-left: 100px;
-    margin-bottom: 50px;
+input {
+    display: none;
 }
 
 /* Show page */
@@ -88,9 +79,51 @@ label {
     transform: scale(1);
 }
 
+/* Filters */
+.zoneFiltres {
+    font-size: larger;
+    text-decoration: none;
+
+    display: flex;
+    justify-content: left;
+    text-align: center;
+    padding: 5px;
+    gap: 10px;
+
+    margin-left: 100px;
+    margin-bottom: 50px;
+}
+
+.filter-wrapper {
+    display: flex;
+    height: 50px;
+}
+
 /* Page Show Wrapper (CSS Grid) */
 .pageshow-wrapper {
     display: flex;
+}
+
+.space {
+    height: 20px;
+}
+
+div.apo {
+    height: 20px;
+}
+
+.semestres {
+    background-color: rgba(60, 195, 219, 0.5);
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.semestres:hover {
+    background-color: rgba(60, 195, 219, 0.6);
 }
 
 /* Carousel show, slide and exec */
