--- a/S4/Design-Interactif/TD5/stylesheet/index.css
+++ b/S4/Design-Interactif/TD5/stylesheet/index.css
@@ -8,3 +8,18 @@ body {
     background-color: #1F1F1F;
     color: aliceblue;
 }
+
+/* Canvas init */
+#canvApp {
+    background-color: rgb(189, 214, 214);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.cube {
+    width: 20px;
+    height: 20px;
+    background-color: aquamarine;
+}
