--- a/S4/Front-End/TP2-Entrainements-Stockages/stylesheet/style.css
+++ b/S4/Front-End/TP2-Entrainements-Stockages/stylesheet/style.css
@@ -1,3 +1,10 @@
+*, *::before, *::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body{
-	background: #9C0;
+	background: rgb(231, 255, 246);
+	color: black;
 }
